# m3ugen

./: .gitignore  CODEOWNERS  Makefile  README.md  config.go  go.mod  go.sum  scanFolders.go  scanRun.go  scanRun_test.go  utils.go
.github/workflows/: ci.yml
cmd/m3ugen/: main.go
documentation/: scanThreading.md
pkg/: scanFolders.go  scanRun.go  scanRun_test.go  utils.go
pkg/dynchan/: dynChan.go
rust/: .editorconfig  .rustfmt.toml  Cargo.toml  README.md
rust/doc/: config_example.yaml
rust/src/: configuration.rs  main.rs  scan.rs
