[package]
name = "m3ugen"
version = "0.1.0"
authors = ["Adeynack <Adeynack@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.8"
eyre = "0.6.8"
color-eyre = "0.6"
clap = { version = "4.0.32", features = ["derive"] }
derive_builder = "0.12.0"
